Fix timeago not showing in revisions

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -269,7 +269,7 @@
     color: $text-color;
 
     @include media-min(sm) {
-      font-size: 18px;
+      font-size: 1rem;
     }
   }
 
